# KDE-Rounded-Corners

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  ClassDiagram.md  ConfigModel.cpp  ConfigModel.h  DISTRO_KWIN_EFFECT_API_VERSION.md  README.md  SequenceDiagram.md  ShaderManager.cpp  ShaderManager.h  dbus.h  kwin-effect-roundcorners.spec  kwin_effect_shapecorners.spec  main.cpp  org.kde.kwin.Effects.xml  shapecorners.cpp  shapecorners.h  shapecorners.json  shapecorners_config.cpp  shapecorners_config.desktop  shapecorners_config.h  shapecorners_config.ui  shapecorners_shader.cpp  shapecorners_shader.h
.copr/: Makefile  copr.yaml  kwin-effect-roundcorners-x11.spec  kwin-effect-roundcorners.spec
.github/: FUNDING.yml
.github/workflows/: arch.yml  cmake.yml  debian-sid.yml  debian11.yml  debian12.yml  debian13.yml  fedora-rawhide.yml  fedora.yml  fedora39.yml  fedora40.yml  fedora41.yml  fedora42.yml  glslangValidator.yml  kubuntu2004.yml  kubuntu2204-backports.yml  kubuntu2204.yml  kubuntu2404.yml  kubuntu2410.yml  kubuntu2504.yml  kubuntu2604.yml  leap16.yml  neon-unstable.yml  neon.yml  push-nightly-tag.yml  tumbleweed.yml
.run/: CMake.run.xml  debian-kde.Dockerfile.run.xml  dockers_neon-stable.Dockerfile.run.xml  dockers_neon-testing.Dockerfile.run.xml  dockers_neon-unstable.Dockerfile.run.xml  kubuntu2004.Dockerfile.run.xml  kubuntu2204-backports.Dockerfile.run.xml  kubuntu2204.Dockerfile.run.xml
cmake/: default-vars.cmake  info.cmake  pack.cmake  qtversion.cmake  test.cmake
dockers/: debian-kde.Dockerfile  kubuntu2004.Dockerfile  kubuntu2204-backports.Dockerfile  kubuntu2204.Dockerfile  neon-stable.Dockerfile  neon-testing.Dockerfile  neon-unstable.Dockerfile
po/: kcmcorners.pot
po/de/: kcmcorners.po
po/es/: kcmcorners.po
po/hu/: kcmcorners.po
po/nl/: kcmcorners.po
po/ru/: kcmcorners.po
po/zh/: kcmcorners.po
shaders_110/: shapecorners.frag
shaders_140/: shapecorners.frag
src/: Animation.cpp  Animation.h  CMakeLists.txt  Color.h  Config.kcfgc  Effect.cpp  Effect.h  FloatColor.h  Shader.cpp  Shader.h  ShapeCornersColor.h  ShapeCornersConfig.kcfgc  ShapeCornersEffect.cpp  ShapeCornersEffect.h  ShapeCornersShader.cpp  ShapeCornersShader.h  ShapeCornersWindow.cpp  ShapeCornersWindow.h  TileChecker.cpp  TileChecker.h  Utils.h  Window.cpp  Window.h  WindowConfig.cpp  WindowConfig.h  WindowManager.cpp  WindowManager.h  metadata.json  options.kcfg  plugin.cpp
src/kcm/: CMakeLists.txt  Config.kcfgc  KCM.cpp  KCM.h  KCM.ui  ShapeCornersKCM.cpp  ShapeCornersKCM.h  ShapeCornersKCM.ui  metadata.json  options.kcfg  plugin.cpp
src/shaders/: CMakeLists.txt  shapecorners.frag  shapecorners.glsl  shapecorners_core.frag  shapecorners_qt5.frag  shapecorners_qt5_core.frag  shapecorners_qt6.frag  shapecorners_qt6_core.frag  shapecorners_shadows.glsl  squircles.glsl  variables.glsl
src/shaders_110/: shapecorners.frag
src/shaders_140/: shapecorners.frag
tools/: autorun-test-install.sh  deploy-to-overlay.sh  generate-messages.sh  install-autorun-test.sh  isSupported.sh  load.sh  show-kwin-logs.sh  test-install.desktop  test-install.sh  unload.sh  upload-to-launchpad.sh
